--- a/public/.htaccess
+++ b/public/.htaccess
@@ -2,5 +2,5 @@
 	RewriteEngine On
 
 	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteRule (.*) index.php/$1
+	RewriteRule (.*) index.php/$1 [L]
 </IfModule>
